# cli-interpreter-cpp

./: .gitignore  CMakeLists.txt  Overview.txt  README.md  main.cpp
AbstractCommand/: CommandBase.cpp  CommandBase.h  FileCommandBase.h  ICommand.h  OptionCommandBase.h  StreamAware.h
Commands/: BatchCommand.cpp  BatchCommand.h  EchoCommand.cpp  EchoCommand.h  HeadCommand.cpp  HeadCommand.h  PromptCommand.h  RmCommand.cpp  RmCommand.h  TimeAndDateCommands.cpp  TimeAndDateCommands.h  TouchCommand.cpp  TouchCommand.h  TrCommand.cpp  TrCommand.h  TruncateCommand.cpp  TruncateCommand.h  WcCommand.cpp  WcCommand.h
Engine/: CommandRegistry.cpp  CommandRegistry.h  Execution.cpp  Execution.h  History.cpp  History.h  ILineExecutor.h  Interpreter.cpp  Interpreter.h  LineExecutor.cpp  LineExecutor.h  Program.cpp  Program.h  StreamResolver.cpp  StreamResolver.h
Exceptions/: Exception.h
Parser/: CommandParser.cpp  CommandParser.h  DerivedParsers.cpp  DerivedParsers.h  Parser.h  ParserStructs.h  PipelineParser.cpp  PipelineParser.h  RedirectionParser.cpp  RedirectionParser.h  Syntax.h  Tokenizer.cpp  Tokenizer.h
Pipeline/: PipeFlowController.h  PipeStream.h
Reader/: CommandReader.cpp  CommandReader.h  ReaderStructs.h
Streams/: ConsoleInputStream.cpp  ConsoleInputStream.h  ConsoleOutputStream.cpp  ConsoleOutputStream.h  FileInputStream.cpp  FileInputStream.h  FileOutputStream.cpp  InputAndOutputStream.h  StringInputStream.cpp  StringInputStream.h
new/: CopyCommand.cpp  CopyCommand.h  LastCommand.cpp  LastCommand.h
src/AbstractCommand/: CommandBase.cpp  CommandBase.h  FileCommandBase.h  ICommand.h  OptionCommandBase.h  SemanticAware.h  StreamAware.h
src/Commands/: BatchCommand.cpp  BatchCommand.h  EchoCommand.cpp  EchoCommand.h  HeadCommand.cpp  HeadCommand.h  PromptCommand.cpp  PromptCommand.h  RmCommand.cpp  RmCommand.h  TimeAndDateCommands.cpp  TimeAndDateCommands.h  TouchCommand.cpp  TouchCommand.h  TrCommand.cpp  TrCommand.h  TruncateCommand.cpp  TruncateCommand.h  WcCommand.cpp  WcCommand.h
src/Engine/: Engine.cpp  Engine.h  ExecContext.h  History.cpp  History.h  ILineExecutor.h  Interpreter.cpp  Interpreter.h  Program.cpp  Program.h  StreamResolverNew.cpp  StreamResolverNew.h
src/Exceptions/: Exception.h
src/Factory/: CommandFactories.cpp  CommandFactories.h  CommandRegistry.cpp  CommandRegistry.h
src/Parser/: CommandParser.cpp  CommandParser.h  DerivedParsers.cpp  DerivedParsers.h  ICommandLineParser.h  Parser.cpp  Parser.h  ParserStructs.h  Tokenizer.cpp  Tokenizer.h
src/Pipeline/: PipeFlowController.cpp  PipeFlowController.h  PipeStream.cpp  PipeStream.h
src/Reader/: CommandReader.cpp
src/Streams/: ConsoleInputStream.cpp  ConsoleInputStream.h  ConsoleOutputStream.cpp  ConsoleOutputStream.h  FileInputStream.cpp  FileInputStream.h  FileOutputStream.cpp  FileOutputStream.h  InputAndOutputStream.h  (+2 more)
(+16 files in other folders)
