cmake_minimum_required(VERSION 4.0)
project(OOP1PROJEKAT)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(OOP1PROJEKAT
        "Streams/InputAndOutputStream.h"
        Streams/ConsoleOutputStream.cpp
        Streams/ConsoleOutputStream.h
        main.cpp
        Streams/ConsoleInputStream.cpp
        Streams/ConsoleInputStream.h
        Streams/FileInputStream.cpp
        Streams/FileInputStream.h
        Streams/FileOutputStream.cpp
        Streams/FileOutputStream.h
        Commands/EchoCommand.cpp
        Commands/EchoCommand.h
        Commands/TimeAndDateCommands.h
        Commands/PromptCommand.h
        "Commands/WcCommand.cpp"
        "Commands/WcCommand.h"
        Reader/CommandReader.cpp
        Reader/CommandReader.h
        Parser/CommandParser.cpp
        Parser/CommandParser.h
        Parser/ICommandLineParser.h
        Reader/ReaderStructs.h
        Parser/DerivedParsers.cpp
        Parser/DerivedParsers.h
        Commands/TouchCommand.cpp
        Commands/TouchCommand.h
        Commands/RmCommand.cpp
        Commands/RmCommand.h
        Commands/TruncateCommand.cpp
        Commands/TruncateCommand.h
        Engine/Interpreter.cpp
        Engine/Interpreter.h
        Engine/History.cpp
        Engine/History.h
        Commands/TrCommand.cpp
        Commands/TrCommand.h
        Engine/StreamResolver.cpp
        Engine/StreamResolver.h
        Streams/StringInputStream.cpp
        Streams/StringInputStream.h
        AbstractCommand/ICommand.h
        AbstractCommand/CommandBase.h
        AbstractCommand/OptionCommandBase.h
        AbstractCommand/FileCommandBase.h
        Engine/CommandRegistry.cpp
        Engine/CommandRegistry.h
        Pipeline/PipeStream.cpp
        Pipeline/PipeStream.h
        Parser/PipelineParser.cpp
        Parser/PipelineParser.h
        Pipeline/PipeFlowController.cpp
        Pipeline/PipeFlowController.h
        Parser/Tokenizer.cpp
        Parser/Tokenizer.h
        Parser/ParserStructs.h
        Parser/Syntax.h
        Engine/Program.cpp
        Engine/Program.h
        AbstractCommand/StreamAware.h
        Parser/RedirectionParser.cpp
        Parser/RedirectionParser.h
        Parser/Parser.cpp
        Parser/Parser.h
        Engine/Execution.cpp
        Engine/Execution.h
        Exceptions/Exception.cpp
        Exceptions/Exception.h
        AbstractCommand/CommandBase.cpp
        Commands/BatchCommand.cpp
        Commands/BatchCommand.h
        Engine/ILineExecutor.h
        Engine/LineExecutor.cpp
        Engine/LineExecutor.h
        Commands/HeadCommand.cpp
        Commands/HeadCommand.h
        Commands/TimeAndDateCommands.cpp
        new/LastCommand.cpp
        new/LastCommand.h
        new/CopyCommand.cpp
        new/CopyCommand.h
)
